style.css
.center-text {
  text-align: center;
}

.body-container {
  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;
  flex-wrap: wrap;
}

.body-container-heading {
  font-family: 'Montserrat', sans-serif;
}

.body-container-subheading {
  font-family: 'Thasadith', sans-serif;
  color: grey;
}

.transfer-container {
  display: flex;
  justify-content: center;
  margin: 30px;

}

.transfer-container-grid {
  display: grid;
  width: 60%;
  height: 40%;
  grid-template: "input result result"
                 "style result result";
  grid-gap: 10px;
}

.transfer-container-grid-input {
  grid-area: input;
}

.transfer-container-grid-style {
  grid-area: style;
}

.transfer-inputs {
  height: 250px;
  width: 250px;
}

.transfer-container-grid-result {
  grid-area: result;
}

.transfer-output {
  height: 500px;
  width: 500px;
}

#try-button {
    border: grey;
    width: 20%;
    font-size: 18px;
    background: white;
}

#try-button a:link, a:visited {
    border: dimgrey;
}

#try-button a:hover {
    border: blue;
}

.create-transfer-container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  background: lightgrey;
  padding: 50px;
  margin: 250px;
  width: 700px;
}

.create-transfer-input-section, .create-transfer-style-section, .create-transfer-result-section {
  border-radius: 10%;
  padding: 30px;

}

.create-transfer-input-section {
  background-color: aliceblue;
  display: grid;
  margin: 15px;
}

.create-transfer-style-section {
  background-color: lavender;
  display: grid;
  margin: 15px;
}

.create-transfer-result-section {
  background-color: thistle;
}

.thumbnails {
  width: 400px;
  display: flex;
  /* flex-direction: column; */
  flex-wrap: wrap;
  justify-content: space-between;
}

.thumbnails img {
  width: 100px;
  height: 100px;
  padding: 15px;
}

